--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "๏ ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "๏ ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "๏ {0} ɪs ᴀʟɪᴠᴇ ʙᴀʙʏ.\n\n<b>๏ ᴜᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "**╭───────────────────⦿**\n**│❍ • ʜᴇʏ {0} •**\n**│❍ • ɪ ᴀᴍ {1} •**\n**├───────────────────⦿**\n**│❍ • ɪ ʜᴀᴠᴇ sᴘᴇᴄɪᴀʟ ғᴇᴀᴛᴜʀᴇs •**\n**├───────────────────⦿**\n**│❍ • ᴀ ғᴀsᴛ & ᴘᴏᴡᴇʀғᴜʟ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ**\n**│  ʙᴏᴛ ᴡɪᴛʜ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs**\n**│❍ • ʏᴏᴜ ᴄᴀɴ ᴘʟᴀʏ ᴍᴜꜱɪᴄ + ᴠɪᴅᴇᴏ •**\n**│❍ • ʙᴇsᴛ ǫᴜɪʟɪᴛʏ ᴍᴜsɪᴄ sᴏᴜɴᴅ •**\n**│❍ • ɴᴏ ʟᴀɢs + ɴᴏ ᴀᴅs •**\n**│❍ • 24x7 ᴏɴʟɪɴᴇ sᴜᴘᴘᴏʀᴛ •**\n**├───────────────────⦿**\n**│❍ • ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ**\n**│   ɢᴇᴛ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs•**\n**│❍ • 𝖬ᴀᴅᴇ ʙʏ ➛ [⎯꯭֯❤️‍🔥⃪ ꯭⃛֯ ̶̲̽͟𓆩⃪ͥ͢ ᷟ𓆩🅘︎𝐒𝐓𝐊𝐇𝐀𝐑💥 ⃪𝄀꯭𝄄꯭ا𝂜✾༐𓂃⃪꯭,,](https://t.me/ll_ISTKHAR_ll) • **\n**╰───────────────────⦿**"
+start_2 : "**╭───────────────────⦿**\n**│❍ • ʜᴇʏ {0} •**\n**│❍ • ɪ ᴀᴍ {1} •**\n**├───────────────────⦿**\n**│❍ • ɪ ʜᴀᴠᴇ sᴘᴇᴄɪᴀʟ ғᴇᴀᴛᴜʀᴇs •**\n**├───────────────────⦿**\n**│❍ • ᴀ ғᴀsᴛ & ᴘᴏᴡᴇʀғᴜʟ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ**\n**│  ʙᴏᴛ ᴡɪᴛʜ ᴀᴡᴇsᴏᴍᴇ ғᴇᴀᴛᴜʀᴇs**\n**│❍ • ʏᴏᴜ ᴄᴀɴ ᴘʟᴀʏ ᴍᴜꜱɪᴄ + ᴠɪᴅᴇᴏ •**\n**│❍ • ʙᴇsᴛ ǫᴜɪʟɪᴛʏ ᴍᴜsɪᴄ sᴏᴜɴᴅ •**\n**│❍ • ɴᴏ ʟᴀɢs + ɴᴏ ᴀᴅs •**\n**│❍ • 24x7 ᴏɴʟɪɴᴇ sᴜᴘᴘᴏʀᴛ •**\n**├───────────────────⦿**\n**│❍ • ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ**\n**│   ɢᴇᴛ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs•**\n**│❍ • 𝖬ᴀᴅᴇ ʙʏ ➛ [⎯꯭֯❤️‍🔥⃪𝑹𝒖𝒅𝒓𝒂](https://t.me/RU_DRA_65) • **\n**╰───────────────────⦿**"
 start_3 : "❅ ʜᴇʏ {0},\n๏ ᴛʜɪs ɪs {1}\n\n❅ ᴛʜᴀɴᴋs ғᴏʀ ᴀᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴀɴ ɴᴏᴡ ᴩʟᴀʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴀᴛ."
 start_4 : "๏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ ɴᴇᴇᴅᴇᴅ</b> 💌\n\n๏ ᴘʟᴇᴀsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏᴜʀ <b>ɢʀᴏᴜᴘ</b> ᴛᴏ <b>sᴜᴘᴇʀɢʀᴏᴜᴘ</b> ᴀɴᴅ ᴛʜᴇɴ ᴀᴅᴅ ᴍᴇ ᴀɢᴀɪɴ.\n\n๏ <b>ʜᴏᴡ ᴛᴏ ᴍᴀᴋᴇ sᴜᴘᴇʀɢʀᴏᴜᴘ ?</b>\n- ᴍᴀᴋᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ's ᴄʜᴀᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "๏ <b>↝ ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴄʜᴀᴛ ↜</b>\n\n๏ ᴛʜɪs ᴄʜᴀᴛ ɪs ʙʟᴀᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴀᴛᴀʙᴀsᴇ.\n๏ ʀᴇǫᴜᴇsᴛ ᴀ <a href={1}>sᴜᴅᴏ ᴜsᴇʀ</a> ᴛᴏ ᴜɴʙʟᴀᴄᴋʟɪsᴛ ʏᴏᴜʀ ᴄʜᴀᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sᴜᴘᴘᴏʀᴛ ᴄʜᴀᴛ.</a>"
@@ -135,7 +135,7 @@ cplay_5 : "๏ ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ."
 cplay_6 : "๏ ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ.\n๏ <b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ ➛</b> @{1}\n\n๏ ᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "๏ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ."
 
-play_1 : "🎶"
+play_1 : "🍃"
 play_2 : "<b>๏ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\n๏ ᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>๏ ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ ➠</b> {0}"
 play_3 : "๏ ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "<b>๏ ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\n๏ ᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -163,19 +163,19 @@ str_2 : "๏ ᴠᴀʟɪᴅ sᴛʀᴇᴀᴍ ᴠᴇʀɪғɪᴇᴅ.\n\n๏ ᴘʀᴏ
 str_3 : "๏ ғᴀɪʟᴇᴅ ᴛᴏ sᴛʀᴇᴀᴍ ʏᴏᴜᴛᴜʙᴇ ʟɪᴠᴇ sᴛʀᴇᴀᴍ, ɴᴏ ʟɪᴠᴇ ꜰᴏʀᴍᴀᴛ ꜰᴏᴜɴᴅ."
 
 ping_1 : "{0} ɪs ᴘɪɴɢɪɴɢ..."
-ping_2 : "{1}\n\n🏓 ᴩᴏɴɢ : {0}ᴍs..\n\n➻ sʏsᴛᴇᴍ sᴛᴀᴛs :\n\n↬ ᴜᴩᴛɪᴍᴇ : {2}\n↬ ʀᴀᴍ : {3}\n↬ ᴄᴩᴜ : {4}\n↬ ᴅɪsᴋ : {5}\n↬ ᴩʏ-ᴛɢᴄᴀʟʟs : {6}ᴍs\n\n**𝖡ʏ » @lll_ISTKHAR_ll**"
+ping_2 : "{1}\n\n🏓 ᴩᴏɴɢ : {0}ᴍs..\n\n➻ sʏsᴛᴇᴍ sᴛᴀᴛs :\n\n↬ ᴜᴩᴛɪᴍᴇ : {2}\n↬ ʀᴀᴍ : {3}\n↬ ᴄᴩᴜ : {4}\n↬ ᴅɪsᴋ : {5}\n↬ ᴩʏ-ᴛɢᴄᴀʟʟs : {6}ᴍs\n\n**𝖡ʏ » @RU_DRA_65**"
 
 queue_1 : "» ғᴇᴛᴄʜɪɴɢ ǫᴜᴇᴜᴇ...\n\nᴘʟᴇᴀsᴇ ᴡᴀɪᴛ..."
 queue_2 : "» ǫᴜᴇᴜᴇ ᴇᴍᴘᴛʏ."
 queue_3 : "<u>» ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴄʜᴇᴄᴋ ᴛʜᴇ ʟɪsᴛ ᴏғ ᴛʜᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋs :</u> <a href={0}>ʜᴇʀᴇ</a>"
-queue_4 : "➲ <b>Aᴅᴅᴇᴅ Tᴏ Qᴜᴇᴜᴇ Aᴛ #{0}\n\n‣ Tɪᴛʟᴇ :</b> {1}\n<b>‣ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>‣ Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n**‣ 𝖩ᴏɪɴ ➛ @PURVI_SUPPORT**"
+queue_4 : "➲ <b>Aᴅᴅᴇᴅ Tᴏ Qᴜᴇᴜᴇ Aᴛ #{0}\n\n‣ Tɪᴛʟᴇ :</b> {1}\n<b>‣ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>‣ Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n**‣ 𝖩ᴏɪɴ ➛ @RU_DRA_65**"
 queue_5 : "ᴛʜᴇʀᴇ's ᴏɴʟʏ ᴏɴᴇ ǫᴜᴇᴜᴇᴅ ᴛʀᴀᴄᴋ ɪɴ ᴘʟᴀʏʟɪsᴛ.\n\nᴀᴅᴅ ᴍᴏʀᴇ ᴛʀᴀᴄᴋs ᴛᴏ ᴄʜᴇᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛɪᴏɴ sᴛʀᴇᴀᴍ\n\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "✦ <b>ѕυzυмє ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ ✦</b>\n\n<b>๏ ᴛɪᴛʟᴇ ➠ </b> <a href={0}>{1}</a>\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➠ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠ </b> {3}\n\n๏ ᴘᴏᴡᴇʀᴇᴅ ʙʏ ➠ [⚚ 𝘽𝘼𝘽𝙔 × 𝙄𝙏Δ𝘾𝙃𝙄 🜲](https://t.me/CRAZY_OP_01)"
-stream_2 : "✦ <b>ѕυzυмє ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ ✦</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➠ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠ </b> {0}\n\n๏ ᴘᴏᴡᴇʀᴇᴅ ʙʏ ➠ [⚚ 𝘽𝘼𝘽𝙔 × 𝙄𝙏Δ𝘾𝙃𝙄 🜲](https://t.me/CRAZY_OP_01)"
+stream_1 : "✦ <b>ѕυzυмє ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ ✦</b>\n\n<b>๏ ᴛɪᴛʟᴇ ➠ </b> <a href={0}>{1}</a>\n<b>๏ ᴅᴜʀᴀᴛɪᴏɴ ➠ </b> {2} ᴍɪɴᴜᴛᴇs\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠ </b> {3}\n\n๏ ᴘᴏᴡᴇʀᴇᴅ ʙʏ ➠ [🍁𝑹𝒖𝒅𝒓𝒂🍁](https://t.me/+a-xTeqUA61AwYmNl)"
+stream_2 : "✦ <b>ѕυzυмє ᴍᴜsɪᴄ sᴛᴀʀᴛᴇᴅ sᴛʀᴇᴀᴍɪɴɢ ✦</b>\n\n<b>๏ sᴛʀᴇᴀᴍ ᴛʏᴘᴇ ➠ </b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>๏ ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ ➠ </b> {0}\n\n๏ ᴘᴏᴡᴇʀᴇᴅ ʙʏ ➠ [🍁𝑹𝒖𝒅𝒓𝒂🍁](https://t.me/+a-xTeqUA61AwYmNl)"
 
 
 CLOSE_BUTTON  : "ᴄʟᴏsᴇ"
